--- a/src/components/moments/MomentDetails.css
+++ b/src/components/moments/MomentDetails.css
@@ -1,41 +1,53 @@
 /* MomentDetail.css */
 
 .post-card {
-    border-radius: 10px;
-    margin-bottom: 20px;
-    padding: 15px;
-    background-color: #fff;
-  }
-  
+  border-radius: 10px;
+  margin-bottom: 20px;
+  padding: 15px;
+  background-color: #fff;
+}
+
+.profile-pic {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+}
+
+.post-image {
+  height: 600px;
+  width: 100%;
+  border-radius: 10px;
+}
+
+.icon {
+  display: inline;
+  font-size: 1.2rem;
+  margin-right: 5px;
+}
+
+.likeCount,
+.commentCount {
+  display: inline;
+  font-size: 1.2rem;
+  margin-left: 5px;
+}
+
+hr {
+  margin: 10px 0;
+}
+
+@media (max-width: 576px) {
   .profile-pic {
-    width: 60px;
-    height: 60px;
-    object-fit: cover;
+    width: 40px;
+    height: 40px;
   }
-  
-  .post-image {
-    height: 600px ;
-    width: 100%;
-    border-radius: 10px;
-  }
-  
+
   .icon {
-    font-size: 1.2rem;
-    margin-right: 5px;
+    font-size: 1rem;
   }
-  
-  hr {
-    margin: 10px 0;
+
+  .likeCount,
+  .commentCount {
+    font-size: 1rem;
   }
-  
-  @media (max-width: 576px) {
-    .profile-pic {
-      width: 40px;
-      height: 40px;
-    }
-  
-    .icon {
-      font-size: 1rem;
-    }
-  }
-  
+}
