--- a/src/components/footer/FooterMain.scss
+++ b/src/components/footer/FooterMain.scss
@@ -3,6 +3,9 @@
     color: #fff;
     padding: 2rem 0;
     text-align: center;
+    position: absolute;
+    height:700px;
+    width:100%;
 }
 
 .footer-container {
